# SovereignCanonBuilder

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  constants.py  exit  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  PROJECT_CHARTER.md  SCB_SPEC.md
scb/compiler/stages/: loader.py  splitter.py
scb/domain/entities/: document.py  entry.py
scb/domain/enums/: source_type.py
scb/domain/identifiers/: document_id.py
scb/domain/value_objects/: checksum.py  source_location.py
tests/unit/compiler/: test_loader.py  test_splitter.py
tests/unit/domain/entities/: test_document.py  test_entry.py
tests/unit/domain/identifiers/: test_document_id.py
tests/unit/domain/value_objects/: test_checksum.py  test_source_location.py
