```toml
[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sovereign-canon-builder"
version = "0.1.0"
description = "A deterministic compiler for Sovereign Canon corpora."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }

authors = [
    { name = "Piotr Kłos" }
]

keywords = [
    "compiler",
    "worldbuilding",
    "lore",
    "knowledge-base",
    "schema",
    "parser",
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "pre-commit>=3.7",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["scb*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=scb",
    "--cov-report=term-missing",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true
pretty = true

[tool.coverage.run]
source = ["scb"]

[tool.coverage.report]
show_missing = true
skip_covered = false
```
[project.urls]
Homepage = "https://github.com/tenjedenpicio-alt/SovereignCanonBuilder"
Repository = "https://github.com/tenjedenpicio-alt/SovereignCanonBuilder"
Issues = "https://github.com/tenjedenpicio-alt/SovereignCanonBuilder/issues"
